Fixed whitespace problem in card tag

--- a/app/www/css/components/recipe-card.css
+++ b/app/www/css/components/recipe-card.css
@@ -31,15 +31,18 @@
 }
 
 .recipe-card article ul>li {
-    margin-bottom: 0px;
     margin-top: 5px;
-    margin-right: 5px;
-    padding: 0px 0%;
-    text-align: center;
+    margin-right: 2%;
+    padding: 10px 0%;
+    display: inline-block;
+    padding: 1px 3%;
+    border-radius: 500px;
     font-size: small;
     font-weight: normal;
+    text-align: center;
     color: var(--text);
 }
+
 
 .recipe-card article div>img {
     transition: var(--default-transition-timing-function);
@@ -63,16 +66,6 @@
 
 .recipe-card article:hover div>img {
     transform: scale(1.1);
-}
-
-.recipe-card article ul>li {
-    margin: 5px, 0%;
-    padding: 10px 0%;
-    display: inline-block;
-    padding: 1px 3%;
-    border-radius: 500px;
-    text-align: center;
-    color: var(--text);
 }
 
 .recipe-card article ul>li:nth-child(3n) {
